apps/webview/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webview
spec:
  selector:
    app: webview
  ports:
    - name: http
      port: 80
      targetPort: http
