apps/webview/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webview
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts: [jhmt.poketwo.io]
      secretName: webview-tls
  rules:
    - host: jhmt.poketwo.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webview
                port:
                  name: http
